linera-protocol/linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_hash_view_code_custom__path__to__ContextType.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_hash_view_code(input))
---
impl linera_views::views::HashableView for TestView
where
    RegisterView<
        custom::path::to::ContextType,
        usize,
    >: linera_views::views::HashableView,
    CollectionView<
        custom::path::to::ContextType,
        usize,
        RegisterView<custom::path::to::ContextType, usize>,
    >: linera_views::views::HashableView,
    Self: linera_views::views::View,
{
    type Hasher = linera_views::sha3::Sha3_256;
    async fn hash_mut(
        &mut self,
    ) -> Result<
        <Self::Hasher as linera_views::views::Hasher>::Output,
        linera_views::ViewError,
    > {
        use linera_views::views::Hasher as _;
        use std::io::Write as _;
        let mut hasher = Self::Hasher::default();
        hasher.write_all(self.register.hash_mut().await?.as_ref())?;
        hasher.write_all(self.collection.hash_mut().await?.as_ref())?;
        Ok(hasher.finalize())
    }
    async fn hash(
        &self,
    ) -> Result<
        <Self::Hasher as linera_views::views::Hasher>::Output,
        linera_views::ViewError,
    > {
        use linera_views::views::Hasher as _;
        use std::io::Write as _;
        let mut hasher = Self::Hasher::default();
        hasher.write_all(self.register.hash().await?.as_ref())?;
        hasher.write_all(self.collection.hash().await?.as_ref())?;
        Ok(hasher.finalize())
    }
}
